
  BUG FIXES

    MAPREDUCE-6425. ShuffleHandler passes wrong "base" parameter to getMapOutputInfo
    if mapId is not in the cache. (zhihai xu via devaraj)

    MAPREDUCE-6426. TestShuffleHandler#testGetMapOutputInfo is failing.
    (zhihai xu via devaraj)

    MAPREDUCE-6439. AM may fail instead of retrying if RM shuts down during the
    allocate call. (Anubhav Dhoot via kasha)

Release 2.7.1 - 2015-07-06 

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

    MAPREDUCE-6300. Task list sort by task id broken. (Siqi Li via aajisaka)

    MAPREDUCE-6238. MR2 can't run local jobs with -libjars command options
    which is a regression from MR1 (zxu via rkanter)

    MAPREDUCE-6324. Fixed MapReduce uber jobs to not fail the udpate of AM-RM
    tokens when they roll-over. (Jason Lowe via vinodkv)

    MAPREDUCE-6252. JobHistoryServer should not fail when encountering a 
    missing directory. (Craig Welch via devaraj)

    MAPREDUCE-6334. Fetcher#copyMapOutput is leaking usedMemory upon
    IOException during InMemoryMapOutput shuffle handler (Eric Payne via jlowe)

    MAPREDUCE-6339. Job history file is not flushed correctly because isTimerActive 
    flag is not set true when flushTimerTask is scheduled. (zhihai xu via devaraj)

    MAPREDUCE-6259. IllegalArgumentException due to missing job submit time
    (zhihai xu via jlowe)

    MAPREDUCE-6251. Added a new config for JobClient to retry JobStatus calls so
    that they don't fail on history-server backed by DFSes with not so strong
    guarantees. (Craig Welch via vinodkv)

    MAPREDUCE-6361. NPE issue in shuffle caused by concurrent issue between
    copySucceeded() in one thread and copyFailed() in another thread on the
    same host. (Junping Du via ozawa)

    MAPREDUCE-6387. Serialize the recently added Task#encryptedSpillKey field at 
    the end. (Arun Suresh via kasha)

    MAPREDUCE-6410. Fixed MapReduce JobHistory server to use the right (login)