@@ -679,11 +679,8 @@ name|getName
 argument_list|()
 operator|+
 literal|" due to error: "
-operator|+
+argument_list|,
 name|e
-operator|.
-name|getMessage
-argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
