@@ -584,6 +584,9 @@ Release 2.7.2 - UNRELEASED
     MAPREDUCE-6439. AM may fail instead of retrying if RM shuts down during the
     allocate call. (Anubhav Dhoot via kasha)
 
+    MAPREDUCE-6442. Stack trace is missing when error occurs in client protocol
+    provider's constructor (Chang Li via ozawa)
+
 Release 2.7.1 - 2015-07-06 
 
   INCOMPATIBLE CHANGES
